k8s/4-rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: cavalocal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5672    # AMQP
            - containerPort: 15672   # Panel de administración web
          volumeMounts:
            - name: data
              mountPath: /var/lib/rabbitmq
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "-q", "ping"]
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 20
            failureThreshold: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: cavalocal
spec:
  selector:
    app: rabbitmq
  ports:
    - { name: amqp, port: 5672, targetPort: 5672 }
    - { name: mgmt, port: 15672, targetPort: 15672 }
  type: ClusterIP
