k8s/8-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cavalocal-ingress
  namespace: cavalocal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: conjunta3p.espe.edu.ec
      http:
        paths:
          # Microservicio de auditoría → /api/audit/...
          - path: /api/audit(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-audit
                port:
                  number: 3002
          # Backend principal → /api/...
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 3001
          # Dashboard / frontend → /dashboard y /
          - path: /dashboard(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
